--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
   <title>Experimental Map</title>
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
-  <link href="style.css" type="text/css" rel="stylesheet">
+  <link href="styles/desktop.css" type="text/css" rel="stylesheet">
+  <link href="styles/mobile.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <div id="map"></div>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjau7uLhokdjg9dF_BKMd3nNrdi3_S2Ak&callback=initMap"
   type="text/javascript"></script>
-  <script src="app.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
 </html>
