added link to css file in html.  added css reset, and started media query for desktop view.

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>Experimental Map</title>
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
+  <link href="styles/base.css" type="text/css" rel="stylesheet">
   <link href="styles/desktop.css" type="text/css" rel="stylesheet">
   <link href="styles/mobile.css" type="text/css" rel="stylesheet">
 </head>
