--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
   <div id="map"></div>
+  <div id="notes"></div>
+  <div id="about"></div>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjau7uLhokdjg9dF_BKMd3nNrdi3_S2Ak&callback=initMap"
   type="text/javascript"></script>
   <script src="scripts/app.js"></script>
