add circle to map once user's location is found

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,6 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjau7uLhokdjg9dF_BKMd3nNrdi3_S2Ak&callback=initMap"
   type="text/javascript"></script>
   <script src="scripts/app.js"></script>
-  <script src="scripts/controller/routes.js"></script>
+  <!-- <script src="scripts/controller/routes.js"></script> -->
 </body>
 </html>
