--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
   <title>Experimental Map</title>
@@ -10,9 +11,14 @@
   <link href="styles/mobile.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <div id="map"></div>
-  <div id="notes"></div>
-  <div id="about"></div>
+  <header>
+    <h1>Report My Wreck!</h1>
+    <nav>
+      <div id="map"></div>
+      <div id="notes"></div>
+      <div id="about"></div>
+    </nav>
+  </header>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjau7uLhokdjg9dF_BKMd3nNrdi3_S2Ak&callback=initMap"
   type="text/javascript"></script>
   <script src="scripts/app.js"></script>
