--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://use.fontawesome.com/db2379db22.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjau7uLhokdjg9dF_BKMd3nNrdi3_S2Ak&callback=initMap"
-  type="text/javascript"></script>
   <title>Experimental Map</title>
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
@@ -16,6 +15,7 @@
 <body>
   <header>
     <h1>Report My Wreck!</h1>
+    <div class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></div>
     <nav>
       <ul>
         <li class="tab" data-content="map"><a href="#map">Map</li>
@@ -25,9 +25,12 @@
     </nav>
     <div id="map"></div>
   </header>
+  <p>This is how you do it.</p>
+  <button type="button">Start!</button>
+  <script src="scripts/app.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjau7uLhokdjg9dF_BKMd3nNrdi3_S2Ak&callback=initMap"
   type="text/javascript"></script>
-  <script src="scripts/app.js"></script>
   <script src="scripts/controller/routes.js"></script>
 </body>
+
 </html>
