--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,14 @@
   <header>
     <h1>Report My Wreck!</h1>
     <div class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></div>
-    <nav>
-      <ul>
+    <nav class"main-nav">
+      <div class="icon-menu">
+        <ul>
         <li class="tab" data-content="map"><a href="#map">Map</li>
         <li class="tab" data-content="about"><a href="#about">About</li>
           <li class="tab" data-content="notes"><a href="#map">Notes</li>
           </ul>
+        </div>
     </nav>
     <div id="map"></div>
   </header>
