close a tags so paragraph isn't a link anymore

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <script src="https://use.fontawesome.com/db2379db22.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
-  <title>Experimental Map</title>
+  <title>Report Your Wreck</title>
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
   <link href="styles/base.css" type="text/css" rel="stylesheet">
@@ -19,15 +19,15 @@
     <nav class"main-nav">
       <div class="icon-menu">
         <ul>
-        <li class="tab" data-content="map"><a href="#map">Map</li>
-        <li class="tab" data-content="about"><a href="#about">About</li>
-          <li class="tab" data-content="notes"><a href="#map">Notes</li>
-          </ul>
-        </div>
+          <li class="tab" data-content="map"><a href="#map">Map</a></li>
+          <li class="tab" data-content="about"><a href="#about">About</a></li>
+          <li class="tab" data-content="notes"><a href="#map">Notes</a></li>
+        </ul>
+      </div>
     </nav>
-    <div id="map"></div>
   </header>
-  <p>Welcome to the Report My Wreck! app.  With this app you can use an interactive map to visually display your wreck for insurance reporting purposes.  Once you click the START button you will be directed to the maps page.  On the maps page, allow use of location servces or input the location of the wreck so we can get you on the map.  Then you can select icons to represent the orientation of the vehicles involved and drop them as pins to the map.  Once you have completed the visual representation of the accident, click on SAVE MAP.  Now you can add notes about the accident, such as a description of how the wreck happened, and other pertinent data that you adjustor will need.  Once that is filled out, you can add email addresses to the appropriate fields and hit the EMAIL button to send the report to your insurance adjustor.</p>
+  <div id="map"></div>
+  <p>Welcome to the Report My Wreck! app.  With this app you can use an interactive map to visually display your wreck for insurance reporting purposes.  Once you click the START button you will be directed to the maps page.  On the maps page, allow use of location services or input the location of the wreck so we can get you on the map.  Then you can select icons to represent the orientation of the vehicles involved and drop them as pins to the map.  Once you have completed the visual representation of the accident, click on SAVE MAP.  Now you can add notes about the accident, such as a description of how the wreck happened, and other pertinent data that your adjustor will need.  Once that is filled out, you can add email addresses to the appropriate fields and hit the EMAIL button to send the report to your insurance adjustor.</p>
   <button type="button">Start!</button>
 </body>
   <script src="scripts/app.js"></script>
