--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,8 @@
   <button type="button">Start!</button>
 </body>
   <script src="scripts/app.js"></script>
-  <script src="scripts/controller/routes.js"></script>
+  <script src="scripts/controller/mapController.js"></script>
+  <!-- <script src="scripts/controller/routes.js"></script> -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjau7uLhokdjg9dF_BKMd3nNrdi3_S2Ak&callback=initMap"
   type="text/javascript"></script>
 </html>
