revise hrefs for the different page views on index.html

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <script src="https://use.fontawesome.com/db2379db22.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
-  <title>Report Your Wreck</title>
+  <title>Report My Wreck!</title>
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
   <link href="styles/base.css" type="text/css" rel="stylesheet">
@@ -19,9 +19,9 @@
     <nav class"main-nav">
       <div class="icon-menu">
         <ul>
-          <li class="tab" data-content="map"><a href="#map">Map</a></li>
-          <li class="tab" data-content="about"><a href="#about">About</a></li>
-          <li class="tab" data-content="notes"><a href="#map">Notes</a></li>
+          <li class="tab" data-content="map"><a href="/map">Map</a></li>
+          <li class="tab" data-content="about"><a href="/about">About</a></li>
+          <li class="tab" data-content="notes"><a href="/notes">Notes</a></li>
         </ul>
       </div>
     </nav>
