added more icons for directional cars

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,14 @@
           <li><img src="img/90deg-black.png" alt=""></li>
           <li><img src="img/180deg-black.png" alt=""></li>
           <li><img src="img/270deg-black.png" alt=""></li>
+          <li><img src="img/45deg-white.png" alt=""></li>
+          <li><img src="img/135deg-white.png" alt=""></li>
+          <li><img src="img/225deg-white.png" alt=""></li>
+          <li><img src="img/315deg-white.png" alt=""></li>
+          <li><img src="img/45deg-black.png" alt=""></li>
+          <li><img src="img/135deg-black.png" alt=""></li>
+          <li><img src="img/225deg-black.png" alt=""></li>
+          <li><img src="img/315deg-black.png" alt=""></li>
         </ul>
 
       </aside>
