working on static maps

--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,13 @@
       <div id="map"></div>
       <button id="removeMarker" type="button" name="removeMarker">Remove Last Marker</button>
       <button id="saveMap" type="button" name="saveMap">Next</button>
+      <button id="myLocationButton"type="button" name="button">Use Location</button>
+      <input id="formField"type="text" name="" value="" placeholder="Address or Intersection">
+      <button id="geocodeAddressButton"type="button" name="button">Enter Location</button>
       <aside class="carIcons">
         <button id="carSelect" type="button" name="button">Select a Car</button>
         <ul id="carIcons">
-          <li><img src="img/0deg-white.png" alt=""></li>
+          <li><img src="img/0deg-white.png" alt="0deg-white.png"></li>
           <li><img src="img/90deg-white.png" alt=""></li>
           <li><img src="img/180deg-white.png" alt=""></li>
           <li><img src="img/270deg-white.png" alt=""></li>
@@ -59,6 +62,7 @@
         </ul>
 
       </aside>
+      <img id="testImage" src="" />
     </div>
 
 
