--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       <aside class="carIcons">
         <button id="carSelect" type="button" name="button">Select a Car</button>
         <ul id="carIcons">
-          <li><img src="img/0deg-white.png" alt="0deg-white.png"></li>
+          <li><img src="img/0deg-white.png" alt=""></li>
           <li><img src="img/90deg-white.png" alt=""></li>
           <li><img src="img/180deg-white.png" alt=""></li>
           <li><img src="img/270deg-white.png" alt=""></li>
