--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       <button type="button" id="startButton" href="/map">Start!</button>
     </div>
     <div class="mapPage" >
-      <p>Type in the location of your accident, or click the Use My Location button. Then select your car icons and place them on the map to simulate the circumstances of the accident. Then click the Next button to move to the next page where you can give your description of the incident.</p>
+      <p>Type in the location of your accident, or click the Use My Location button. Then select your car icons and click on the map to place pins to simulate the circumstances of the accident. Then click the Next button to move to the next page where you can give your description of the incident.</p>
       <div id="map"></div>
       <button id="removeMarker" type="button" name="removeMarker">Remove Last Marker</button>
       <button id="saveMap" type="button" name="saveMap">Next</button>
