styling header and make paragraph responsive

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
   <link href="styles/base.css" type="text/css" rel="stylesheet">
+  <link href="styles/layout.css" type="text/css" rel="stylesheet">
   <link href="styles/mobile.css" type="text/css" rel="stylesheet">
   <link href="styles/desktop.css" type="text/css" rel="stylesheet">
 </head>
@@ -29,7 +30,7 @@
   </header>
   <main>
     <div class="indexPage">
-      <p>Welcome to the Report My Wreck! app.  With this app you can use an interactive map to visually display your wreck for insurance reporting purposes.  Once you click the START button you will be directed to the maps page.  On the maps page, allow use of location services or input the location of the wreck so we can get you on the map.  Then you can select icons to represent the orientation of the vehicles involved and drop them as pins to the map.  Once you have completed the visual representation of the accident, click on SAVE MAP.  Now you can add notes about the accident, such as a description of how the wreck happened, and other pertinent data that your adjustor will need.  Once that is filled out, you can add email addresses to the appropriate fields and hit the EMAIL button to send the report to your insurance adjustor.</p>
+      <p>Welcome to the Report My Wreck! app.  With this app you can use an interactive map to visually display your wreck for insurance reporting purposes.  Once you click the START button you will be directed to the maps page.  On the maps page, allow use of location services or input the location of the wreck so we can get you on the map.  Then you can select icons to represent the orientation of the vehicles involved and drop them as pins to the map.  Once you have completed the visual representation of the accident, click on NEXT.  Now you can add notes about the accident, such as a description of how the wreck happened, and other pertinent data that your adjustor will need.  Once that is filled out, you can add email addresses to the appropriate fields and hit the EMAIL button to send the report to your insurance adjustor.</p>
       <button type="button" id="startButton" href="/map">Start!</button>
     </div>
     <div class="mapPage" >
