--- a/public/index.html
+++ b/public/index.html
@@ -80,19 +80,19 @@
     <div class="aboutPage">
       <section id="cody">
           <img src="https://i.ytimg.com/vi/2UPxrJy1zyA/maxresdefault.jpg" alt="">
-          <p>Great plan! let me diarize this, and we can synchronise ourselves at a later timepoint helicopter view, or thought shower, personal development, yet are there any leftovers in the kitchen? one-sheet, so put in in a deck for our standup today. Synergize productive mindfulness not a hill to die on, or feature creep. Herding cats.</p>
+          <p class="aboutUs">Great plan! let me diarize this, and we can synchronise ourselves at a later timepoint helicopter view, or thought shower, personal development, yet are there any leftovers in the kitchen? one-sheet, so put in in a deck for our standup today. Synergize productive mindfulness not a hill to die on, or feature creep. Herding cats.</p>
       </section>
       <section id="shannon">
         <img src="https://i.ytimg.com/vi/J2tuDGEm_vs/maxresdefault.jpg" alt="">
-        <p>Hodor hodor hodor hodor hodor hodor hodor? Hodor hodor - HODOR hodor, hodor hodor. Hodor hodor - hodor hodor hodor? Hodor hodor HODOR! Hodor hodor hodor hodor hodor hodor! Hodor hodor - hodor... Hodor hodor hodor - HODOR hodor, hodor hodor. Hodor.</p>
+        <p class="aboutUs">Hodor hodor hodor hodor hodor hodor hodor? Hodor hodor - HODOR hodor, hodor hodor. Hodor hodor - hodor hodor hodor? Hodor hodor HODOR! Hodor hodor hodor hodor hodor hodor! Hodor hodor - hodor... Hodor hodor hodor - HODOR hodor, hodor hodor. Hodor.</p>
       </section>
       <section id="george">
         <img src="https://media.ed.edmunds-media.com/srt/viper/2013/oem/2013_srt_viper_coupe_gts_fq_oem_2_1280.jpg" alt="">
-        <p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand?</p>
+        <p class="aboutUs">Nipper mizzen pirate avast ye ahoy Blimey pillage code of conduct black jack. Man-of-war sutler hogshead capstan driver Yellow Jack ho parrel hearties hempen halter. Pirate Admiral of the Black galleon dead men tell no tales lass killick league Jack Tar landlubber or just lubber Corsair.</p>
       </section>
       <section id="rob">
-        <img src="https://www.tesla.com/tesla_theme/assets/img/models/v1.0/section-hero-background.jpg?20170907" alt="">
-        <p>Nipper mizzen pirate avast ye ahoy Blimey pillage code of conduct black jack. Man-of-war sutler hogshead capstan driver Yellow Jack ho parrel hearties hempen halter. Pirate Admiral of the Black galleon dead men tell no tales lass killick league Jack Tar landlubber or just lubber Corsair.</p>
+        <img src="https://www.tesla.com/tesla_theme/assets/img/models/v1.0/section-hero-background.jpg?20170907" alt="" id="robCar">
+        <p class="aboutUs">My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand?</p>
       </section>
     </div>
   </main>
