--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,11 @@
 </head>
 <body>
   <header>
-    <h1><a href="/">Report My Wreck!</a></h1>
+    <h1><a href="/" id="logo">Report My Wreck!</a></h1>
     <div class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></div>
     <nav class"main-nav">
       <div class="icon-menu">
         <ul>
-          <!-- <li class="tab" data-content="map"><a href="/">Home</a></li> -->
           <li class="tab" data-content="map"><a href="/map">Map</a></li>
           <li class="tab" data-content="notes"><a href="/notes">Notes</a></li>
           <li class="tab" data-content="about"><a href="/about">About</a></li>
