fix car icon drop down...again

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       <p id="mapPageInstructions">Type in the location of your accident, or click the Use My Location button. Then select your car icons and click on the map to place pins to simulate the circumstances of the accident. Then click the Next button to move to the next page where you can give your description of the incident.</p>
       <div id="map"></div>
       <button id="removeMarker" type="button" name="removeMarker">Remove Last Marker</button>
-      <button id="saveMap" type="button" name="saveMap">Next</button>
+      <a href="/notes"><button id="saveMap" type="button" name="saveMap">Next</button></a>
       <button id="myLocationButton"type="button" name="button">Use Location</button>
       <input id="formField"type="text" name="" value="" placeholder="Address or Intersection">
       <button id="geocodeAddressButton"type="button" name="button">Enter Location</button>
