added subject line

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,7 @@
         Description of Accident:<br>
         <input type="text" id="userName" placeholder="Your Name">
         <input type="email" id="recipient" placeholder="Recipient's Email" required>
+        <input type="text" id="subject" placeholder="Subject">
         <textarea name="name" rows="8" cols="80" id="emailBody" class="text-area"></textarea>
         <br><br>
         <button type="button" id="emailButton">Email Your Rep!</button>
