--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
     <div class="notesPage">
       <img id="testImage" src="" />
       <section>
-        A picture is worth a thousand words. You now have a captured map displaying Where the accident took place along with the vehicle positions. Below, you can email this your insurance agent or any reciepient of your choice. Please describe in detail how the incident occurred based on the map above.
+        A picture is worth a thousand words. You now have a captured map displaying where the accident took place along with the vehicle positions. Below, you can email this to your insurance agent or any reciepient of your choice. Please describe in detail how the incident occurred based on the map above.
       </section>
       <form action="/Emailsomewhere.php">
         Description of Accident:<br>
