adjust static map's img size and zoom level

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,6 @@
       <div class="icon-menu">
         <ul>
           <li class="tab" data-content="map"><a href="/map">Map</a></li>
-          <li class="tab" data-content="notes"><a href="/notes">Notes</a></li>
           <li class="tab" data-content="about"><a href="/about">About</a></li>
         </ul>
       </div>
@@ -39,7 +38,7 @@
       <div id="map"></div>
       <button id="removeMarker" type="button" name="removeMarker">Remove Last Marker</button>
       <a href="/notes"><button id="saveMap" type="button" name="saveMap">Next</button></a>
-      <button id="myLocationButton"type="button" name="button">Use Location</button>
+      <button id="myLocationButton"type="button" name="button">Use My Location</button>
       <input id="formField"type="text" name="" value="" placeholder="Address or Intersection">
       <button id="geocodeAddressButton"type="button" name="button">Enter Location</button>
       <aside class="carIcons">
