--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
       </section>
       <section id="george">
         <img src="https://media.ed.edmunds-media.com/srt/viper/2013/oem/2013_srt_viper_coupe_gts_fq_oem_2_1280.jpg" alt="">
-        <p class="aboutUs">Nipper mizzen pirate avast ye ahoy Blimey pillage code of conduct black jack. Man-of-war sutler hogshead capstan driver Yellow Jack ho parrel hearties hempen halter. Pirate Admiral of the Black galleon dead men tell no tales lass killick league Jack Tar landlubber or just lubber Corsair.</p>
+        <p class="aboutUs">I am a six-year Air Force Veteran. I love traveling. Made to all continents except Antarctica. Current Code Fellows student navigating my way through this ever-expanding industry.</p>
       </section>
       <section id="rob">
         <img src="https://www.tesla.com/tesla_theme/assets/img/models/v1.0/section-hero-background.jpg?20170907" alt="" id="robCar">
