added about me blerb and removed some weird code from notesView.js

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
     <div class="aboutPage">
       <section id="cody">
           <img src="https://i.ytimg.com/vi/2UPxrJy1zyA/maxresdefault.jpg" alt="">
-          <p class="aboutUs">Great plan! let me diarize this, and we can synchronise ourselves at a later timepoint helicopter view, or thought shower, personal development, yet are there any leftovers in the kitchen? one-sheet, so put in in a deck for our standup today. Synergize productive mindfulness not a hill to die on, or feature creep. Herding cats.</p>
+          <p class="aboutUs">Hawaii born, Virginia raised, California shaped and now living the dream in serene Seattle. Babysitter of stylists turned developer. Will write code for cats.</p>
       </section>
       <section id="shannon">
         <img src="https://i.ytimg.com/vi/J2tuDGEm_vs/maxresdefault.jpg" alt="">
