--- a/public/index.html
+++ b/public/index.html
@@ -36,13 +36,8 @@
     <div class="mapPage" >
       <p id="mapPageInstructions">Type in the location of your accident, or click the Use My Location button. Then select your car icons and click on the map to place pins to simulate the circumstances of the accident. Then click the Next button to move to the next page where you can give your description of the incident.</p>
       <div id="map"></div>
-      <button id="removeMarker" type="button" name="removeMarker">Remove Last Marker</button>
-      <button id="saveMap" type="button" name="saveMap">Next</button>
-      <button id="myLocationButton"type="button" name="button">Use My Location</button>
-      <input id="formField"type="text" name="" value="" placeholder="Address or Intersection">
-      <button id="geocodeAddressButton"type="button" name="button">Enter Location</button>
       <aside class="carIcons">
-        <button id="carSelect" type="button" name="button">Select a Car</button>
+        <button id="carSelect" type="button" name="button">Car Icons</button>
         <ul id="carIcons">
           <li><img src="img/0deg-white.png" alt=""></li>
           <li><img src="img/90deg-white.png" alt=""></li>
@@ -62,6 +57,14 @@
           <li><img src="img/315deg-black.png" alt=""></li>
         </ul>
       </aside>
+      <section class="controls">
+        <button id="removeMarker" type="button" name="removeMarker">Remove Last Marker</button>
+        <button id="saveMap" type="button" name="saveMap">Next</button>
+        <button id="myLocationButton"type="button" name="button">Use My Location</button>
+        <input id="formField"type="text" name="" value="" placeholder="Address or Intersection">
+        <button id="geocodeAddressButton"type="button" name="button">Enter Location</button>
+      </section>
+
     </div>
     <div class="notesPage">
       <section>
