added about me blurb

--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
       </section>
       <section id="rob">
         <img src="https://www.tesla.com/tesla_theme/assets/img/models/v1.0/section-hero-background.jpg?20170907" alt="" id="robCar">
-        <p class="aboutUs">My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand?</p>
+        <p class="aboutUs">Born in Wisconsin, raised in Texas, 6 year Army veteran stationed in Hawaii.  2 time winner of the "Boeing: We No Longer Need Your Services" award.  Time to PIVOT! and get a new career.</p>
       </section>
     </div>
   </main>
