--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
       </section>
       <section id="shannon">
         <img src="https://i.ytimg.com/vi/J2tuDGEm_vs/maxresdefault.jpg" alt="">
-        <p class="aboutUs">Hodor hodor hodor hodor hodor hodor hodor? Hodor hodor - HODOR hodor, hodor hodor. Hodor hodor - hodor hodor hodor? Hodor hodor HODOR! Hodor hodor hodor hodor hodor hodor! Hodor hodor - hodor... Hodor hodor hodor - HODOR hodor, hodor hodor. Hodor.</p>
+        <p class="aboutUs">Originally from the Philadelphia suburbs I moved to Seattle in 2015. My favorite season is autumn; I love the colors, going apple picking, and baking delicious treats.</p>
       </section>
       <section id="george">
         <img src="https://media.ed.edmunds-media.com/srt/viper/2013/oem/2013_srt_viper_coupe_gts_fq_oem_2_1280.jpg" alt="">
