minor text fixes

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjau7uLhokdjg9dF_BKMd3nNrdi3_S2Ak"
     type="text/javascript"></script>
   <script src="https://use.fontawesome.com/db2379db22.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Roboto" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
   <title>Report My Wreck!</title>
