--- a/public/index.html
+++ b/public/index.html
@@ -59,13 +59,14 @@
         </ul>
       </aside>
       <section class="controls">
+        <button id="myLocationButton"type="button" name="button">Use My Location</button>
+        <!-- <button id="geocodeAddressButton"type="button" name="button">Enter Location</button> -->
+        <form class="geocodeAddressButton">
+          <input id="formField"type="text" name="" value="" placeholder="Address or Intersection">
+        </form>
         <button id="removeMarker" type="button" name="removeMarker">Remove Last Marker</button>
         <button id="saveMap" type="button" name="saveMap">Next</button>
-        <button id="myLocationButton"type="button" name="button">Use My Location</button>
-        <input id="formField"type="text" name="" value="" placeholder="Address or Intersection">
-        <button id="geocodeAddressButton"type="button" name="button">Enter Location</button>
       </section>
-
     </div>
     <div class="notesPage">
       <section>
