--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,24 @@
   </header>
   <main>
     <div class="indexPage">
-      <p class="introInstructions">Welcome to the Report My Wreck! app.  With this app you can use an interactive map to visually display your wreck for insurance reporting purposes.  Once you click the START button you will be directed to the maps page.  On the maps page, allow use of location services or input the location of the wreck so we can get you on the map.  Select the car icon from the SELECT A CAR dropdown menu that you would like to use first; click the location on the map where you would like to drop that icon. You can add as many car icons as you would like. If you would like to remove the last icon added, use the REMOVE LAST MARKER button.  Once you have completed the visual representation of the accident, click on NEXT to review your map and add notes about the incident.  You can add a description of how the wreck happened and other pertinent data that your adjustor will need.  Once that is filled out, add the email address for your insurance adjustor and hit the EMAIL button; we'll send the email on your behalf so don't forget to add your name and any memo you would like to include. You can also choose to include your email address to receive a copy of the form for your own records.</p>
-      <a href="/map"><button type="button" id="startButton">Start!</button></a>
+      <p class="introInstructions">Welcome to the Report My Wreck! app.  With this app you can use an interactive map to visually display your wreck for insurance reporting purposes.</p>
+      <div class="instructions">
+        <img src="./img/Google_Maps.png" alt="" class="introImages">
+        <p>Mark up the map to reflect your accident.</p>
+      </div>
+      <div class="instructions">
+        <img src="./img/note.png" alt="" class="introImages" id="notepad">
+        <div class="clearfix"></div>
+        <p id="notepad">Add notes about what happened.</p>
+      </div>
+      <div class="clearfix"></div>
+      <div class="instructions">
+        <img src="./img/email-icon.gif" alt="" class="introImages">
+        <p>Email your insurance representative.</p>
+      </div>
+      <a href="/map">
+        <button type="button" id="startButton">Get Started!</button>
+      </a>
     </div>
     <div class="mapPage" >
       <p id="mapPageInstructions">Type in the location of your accident (intersection and city or street address), or click the USE MY LOCATION button. Then select your car icons and click on the map to place the icons in order to simulate the circumstances of the accident. When you are finished click the NEXT button to save your image and go to the submission page. You will be able to add your description of the incident before submitting the form.</p>
@@ -60,9 +76,8 @@
       </aside>
       <section class="controls">
         <button id="myLocationButton"type="button" name="button">Use My Location</button>
-        <!-- <button id="geocodeAddressButton"type="button" name="button">Enter Location</button> -->
         <form class="geocodeAddressButton">
-          <input id="formField"type="text" name="" value="" placeholder="Address or Intersection">
+          <input id="formField"type="text" name="" value="" placeholder="Enter an Address or Intersection">
         </form>
         <button id="removeMarker" type="button" name="removeMarker">Remove Last Marker</button>
         <button id="saveMap" type="button" name="saveMap">Next</button>
