add hrs between intro page instructions

--- a/public/index.html
+++ b/public/index.html
@@ -36,16 +36,20 @@
         <img src="./img/Google_Maps.png" alt="" class="introImages">
         <p>Mark up the map to reflect your accident.</p>
       </div>
+      <hr>
       <div class="instructions">
         <img src="./img/note.png" alt="" class="introImages" id="notepad">
         <div class="clearfix"></div>
         <p id="notepad">Add notes about what happened.</p>
       </div>
       <div class="clearfix"></div>
+      <hr>
+      <div class="clearfix"></div>
       <div class="instructions">
         <img src="./img/email-icon.gif" alt="" class="introImages">
         <p>Email your insurance representative.</p>
       </div>
+      <hr>
       <a href="/map">
         <button type="button" id="startButton">Get Started!</button>
       </a>
