--- a/public/index.html
+++ b/public/index.html
@@ -91,12 +91,12 @@
       <section>
         A picture is worth a thousand words. You now have a map displaying where the accident took place along with the vehicle positions. Below, you can email this to your insurance agent or any reciepient of your choice. Please describe in detail how the incident occurred and click EMAIL YOUR REP to send the form to the email address provided.
       </section>
-      <img id="testImage" src="" />
+      <img id="mapPreview" src="" />
       <form id="move">
-        <input type="text" id="userName" placeholder="Your Name">
-        <input type="email" id="recipient" placeholder="Recipient's Email" required>
-        <input type="text" id="subject" placeholder="Subject">
-        <textarea name="name" rows="8" cols="80" id="emailBody" class="text-area" placeholder="Enter your account of the accident"></textarea>
+        <input type="text" id="userName" placeholder="Your Name" class="formInput">
+        <input type="email" id="recipient" placeholder="Recipient's Email" required class="formInput">
+        <input type="text" id="subject" placeholder="Subject" class="formInput">
+        <textarea name="name" rows="8" cols="80" id="emailBody" class="text-area" placeholder="Enter your account of the accident" class="formInput"></textarea>
         <button type="button" id="emailButton">Email Your Rep!</button>
       </form>
     </div>
