more styling of buttons & making instructions more succinct

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
       </a>
     </div>
     <div class="mapPage" >
-      <p id="mapPageInstructions">Type in the location of your accident (intersection and city or street address), or click the USE MY LOCATION button. Then select your car icons and click on the map to place the icons in order to simulate the circumstances of the accident. When you are finished click the NEXT button to save your image and go to the submission page. You will be able to add your description of the incident before submitting the form.</p>
+      <p id="mapPageInstructions">Select a car icon from the drop down menu and add it to the map by clicking where you want to drop it. When you are finished click the SUBMIT MAP button to save your image and go to the submission page. You will be able to add your description of the incident before submitting the form.</p>
       <div id="map"></div>
       <aside class="carIcons">
         <button id="removeMarker" type="button" name="removeMarker">Remove Last Marker</button>
@@ -84,12 +84,12 @@
         <form class="geocodeAddressButton">
           <input id="formField"type="text" name="" value="" placeholder="Enter an Address or Intersection">
         </form>
-        <button id="saveMap" type="button" name="saveMap">Next &rarr;</button>
+        <button id="saveMap" type="button" name="saveMap">Submit Map &rarr;</button>
       </section>
     </div>
     <div class="notesPage">
       <section>
-        A picture is worth a thousand words. You now have a map displaying where the accident took place along with the vehicle positions. Below, you can email this to your insurance agent or any reciepient of your choice. Please describe in detail how the incident occurred and click EMAIL YOUR REP to send the form to the email address provided.
+        Take notes on the accident in the form below and add the email address to which you would like to send this form. Remember to include your full name as we will be emailing this form on your behalf.
       </section>
       <img id="mapPreview" src="" />
       <form id="move">
