add 'enter address' button back to map page

--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,7 @@
         <form class="geocodeAddressButton">
           <input id="formField"type="text" name="" value="" placeholder="Enter an Address or Intersection">
         </form>
+        <button id="setAddress">Set Address</button>
         <button id="saveMap" type="button" name="saveMap">Submit Map &rarr;</button>
       </section>
     </div>
