--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 <body>
   <header>
     <h1><a href="/" id="logo">Report My Wreck!</a></h1>
+    <img src="img/loader.gif" alt="">
     <div class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></div>
     <nav class"main-nav">
       <div class="icon-menu">
