--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
 <body>
   <header>
     <h1><a href="/" id="logo">Report My Wreck!</a></h1>
-    <img src="img/loader.gif" alt="">
+    <div class="cargif">
+      <img src="img/loader.gif" alt="">
+    </div>
     <div class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></div>
     <nav class"main-nav">
       <div class="icon-menu">
