styling buttons some more

--- a/public/index.html
+++ b/public/index.html
@@ -84,10 +84,10 @@
           <li><img src="img/315deg-black.png" alt=""></li>
         </ul>
       </aside>
-      <section class="controls">
+      <!-- <section class="controls"> -->
         <button id="removeMarker" type="button" name="removeMarker">Remove Last Marker</button>
         <button id="saveMap" type="button" name="saveMap">Submit Map &rarr;</button>
-      </section>
+      <!-- </section> -->
     </div>
     <div class="notesPage">
       <section>
