--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
       <form class="geocodeAddressButton">
         <input id="formField"type="text" name="" value="" placeholder="Enter an Address or Intersection">
       </form>
-      <button id="setAddress">Set Address</button>
+      <button id="setAddress">Go</button>
       <button id="myLocationButton"type="button" name="button">Use My Location</button>
       <aside class="carIcons">
         <button id="carSelect" type="button" name="button">Car Icons</button>
