--- a/public/index.html
+++ b/public/index.html
@@ -94,9 +94,11 @@
     </div>
     <div class="notesPage">
       <section>
-        Take notes on the accident in the form below and add the email address to which you would like to send this form. Remember to include your full name as we will be emailing this form on your behalf.
+        Take notes on the accident in the form below and add the email address to which you would like to send this form. <br /> Remember to include your full name as we will be emailing this form on your behalf.
       </section>
-      <img id="mapPreview" src="" />
+      <div class="mapPreviewBox">
+        <img id="mapPreview" src="" />
+      </div>
       <form id="move">
         <input type="text" id="userName" placeholder="Your Name" class="formInput">
         <input type="email" id="recipient" placeholder="Recipient's Email" required class="formInput">
