make map center on your current location

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
         <input id="formField"type="text" name="" value="" placeholder="Enter an Address or Intersection">
       </form>
       <button id="setAddress">Go</button>
-      <button id="myLocationButton"type="button" name="button">Use My Location</button>
+      <!-- <button id="myLocationButton"type="button" name="button">Use My Location</button> -->
       <aside class="carIcons">
         <button id="carSelect" type="button" name="button">Car Icons</button>
         <ul id="carIcons">
