--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
           <img src="https://i.ytimg.com/vi/2UPxrJy1zyA/maxresdefault.jpg" alt="" class="car">
         </div>
         <div class="aboutBlurb">
-          <p class="aboutUs">Hawaii born, Virginia raised, California shaped and now living the dream in serene Seattle. Babysitter of stylists turned developer. Will write code for cats.</p>
+          <p class="aboutUs">Hawaii born, Virginia raised, California shaped and now living the dream in serene Seattle. A babysitter of stylists turned developer. Will write code for cats.</p>
         </div>
       </section>
       <section id="aboutBox">
