fixed issue of not being able to go back to the map page from the notes page when hitting back button

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
       </aside>
       <!-- <section class="controls"> -->
         <button id="removeMarker" type="button" name="removeMarker">Remove Last Marker</button>
-        <button id="saveMap" type="button" name="saveMap">Submit Map &rarr;</button>
+        <a href='/notes'><button id="saveMap" type="button" name="saveMap">Submit Map &rarr;</button></a>
       <!-- </section> -->
     </div>
     <div class="notesPage">
