made the change that SHANNON requested and added Robs new photo

--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
       </section>
       <section id="aboutBox">
         <div class="aboutImage">
-          <img src="https://www.tesla.com/tesla_theme/assets/img/models/v1.0/section-hero-background.jpg?20170907" alt="" class="car">
+          <img src="https://cdn.shopify.com/s/files/1/0196/5170/files/DSC0132_grande.jpg?v=1473353805" class="car">
         </div>
         <div class="aboutBlurb">
           <p class="aboutUs">Born in Wisconsin, raised in Texas, 6 year Army veteran stationed in Hawaii.  2 time winner of the "Boeing: We No Longer Need Your Services" award.  Time to PIVOT! and get a new career.</p>
