--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
   <title>Report My Wreck!</title>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="http://findicons.com/files/icons/1840/free_style/128/car.png">
   <link href="styles/base.css" type="text/css" rel="stylesheet">
   <link href="styles/layout.css" type="text/css" rel="stylesheet">
   <link href="styles/modules.css" type="text/css" rel="stylesheet">
